html of side bar done

--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -7,4 +7,9 @@
         .searchBar
             .fas.fa-search
             input(type="text", placeholder = "Search")
+            .fas.fa-caret-down
     .head-right
+        .far.fa-question-circle
+        .fas.fa-cog
+        .fas.fa-th
+        img(src="imgs/fox.jpg", alt="user-icon")
