--- a/src/pug/final/index.pug
+++ b/src/pug/final/index.pug
@@ -6,5 +6,6 @@ head
     link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css' integrity='sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==' crossorigin='anonymous')
     title Gmail Clone
 body
-    .layout
-        include ../components/header.pug
+    include ../components/header.pug
+    .main-layout
+        include ../components/side-bar.pug
