--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -1,15 +1,15 @@
 .header 
     .head-left
         i.fas.fa-bars
-        img(src="imgs/gmail-icon.png", alt="gmail-icon")
-        .brand-title Gmail
+        img(src="imgs/gmail-icon.png" alt="gmail-icon")
+        .brand-name Gmail
     .head-center
         .searchBar
-            .fas.fa-search
+            i.fas.fa-search
             input(type="text", placeholder = "Search")
-            .fas.fa-caret-down
+            i.fas.fa-caret-down
     .head-right
-        .far.fa-question-circle
-        .fas.fa-cog
-        .fas.fa-th
-        img(src="imgs/fox.jpg", alt="user-icon")
+        i.far.fa-question-circle
+        i.fas.fa-cog
+        i.fas.fa-th
+        img(src="imgs/fox.jpg" alt="user-icon")
