--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -5,8 +5,9 @@
         .brand-name Gmail
     .head-center
         .searchBar
-            i.fas.fa-search
-            input(type="text", placeholder = "Search")
+            .left-search
+                i.fas.fa-search
+                input(type="text", placeholder = "Search mail")
             i.fas.fa-caret-down
     .head-right
         i.far.fa-question-circle
