--- a/src/styles/libs/_variables.scss
+++ b/src/styles/libs/_variables.scss
@@ -7,5 +7,9 @@ $color_palette: (
     transp: rgba(255, 255, 255, 0),
     bg: #16212b,
     fg: #fff,
-    outline: rgba(255, 255, 255, 0.116)
+    outline: rgba(255, 255, 255, 0.116),
+    
+    //Searchbar
+    search: rgba(255, 255, 255, 0.267),
+    placehold: #fff,
 );
