update to header to use flex grid

--- a/src/pug/components/side-bar.pug
+++ b/src/pug/components/side-bar.pug
@@ -1,7 +1,9 @@
 .side-bar
 
     .compose
-        .compose-btn Compose
+        .compose-btn
+            i.compose-icon.fas.fa-plus#plus
+            .compose-text Compose
 
     .mail-folders
         .folder
