--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -10,6 +10,7 @@
                 input(type="text", placeholder = "Search mail")
             i.fas.fa-caret-down
     .head-right
+        //- .right-contents
         i.far.fa-question-circle
         i.fas.fa-cog
         i.fas.fa-th
