emails shaping up

--- a/src/pug/components/email-main.pug
+++ b/src/pug/components/email-main.pug
@@ -5,29 +5,51 @@
             i.fas.fa-redo-alt
             i.fas.fa-ellipsis-v
         .right-actions
-            .count 1-50 of 250
+            span.count 1-50 of 250
             i.fas.fa-chevron-left
             i.fas.fa-chevron-right
     
-    .filter-btns
+    .filters
         .filter
             i.fas.fa-inbox
-            .filter-title Primary
-            .underline
+            span.filter-title Primary
+            .underline#pri-under
         .filter
             i.fas.fa-user-friends
-            .filter-title Social
-            .underline
+            span.filter-title Social
+            //- .underline
         .filter
             i.fas.fa-tag
-            .filter-title Promotions
-            .underline
+            span.filter-title Promotions
+            //- .underline
         .filter
             i.fas.fa-info-circle
-            .filter-title Updates
-            .underline
+            span.filter-title Updates
+            //- .underline
 
     .emails
+        .email
+            input(type="checkbox", name="")
+            i.far.fa-star
+            .email-sender Mom
+            .email-title Title of Email
+            .email-time 9:42 AM
+            .email-actions
+                i.fas.fa-archive
+                i.fas.fa-trash
+                i.fas.fa-envelope-open
+                i.fas.fa-clock
+        .email
+            input(type="checkbox", name="")
+            i.far.fa-star
+            .email-sender Mom
+            .email-title Title of Email
+            .email-time 9:42 AM
+            .email-actions
+                i.fas.fa-archive
+                i.fas.fa-trash
+                i.fas.fa-envelope-open
+                i.fas.fa-clock
         .email
             input(type="checkbox", name="")
             i.far.fa-star
