--- a/src/styles/components/_email-main.scss
+++ b/src/styles/components/_email-main.scss
@@ -2,4 +2,115 @@
 
 .email-main {
     grid-column: 2;
+
+    .actions {
+        @include flex-center;
+        color: getColor(side-icon);
+        padding: 15px 20px;
+
+        .left-actions {
+            @include flex-center;
+            margin-right: auto;
+
+            & > * {
+                margin-right: 30px;
+            }
+        }
+
+        .right-actions {
+            & > * {
+                margin-right: 30px;
+            }
+        }
+    }
+
+    .filters {
+        background-color: getColor(em_bg);
+        display: flex;
+        height: 60px;
+        align-items: center;
+        margin-right: $em-right-marg;
+        border-bottom: 1px solid getColor(outline-em);
+
+        .filter {
+            position: relative;
+            color: getColor(filter);
+            width: 24%;
+            // padding: 20px;
+            // padding-right: 60px;
+            i {
+                margin-left: 15%;
+            }
+
+            span {
+                margin-left: 20px;
+            }
+
+            .underline {
+                position: absolute;
+                bottom: -21px;
+                height: 5px;
+                width: 90%;
+                margin-left: 5%;
+                background-color: getColor(red);
+                overflow: hidden;
+                border-top-right-radius: 20px;
+                border-top-left-radius: 20px;
+                opacity: 0;
+                // &#pri-under {
+                //     opacity: 1;
+                // }
+                &:nth-of-type(1) {
+                    opacity: 1;
+                }
+            }
+
+            &:first-of-type {
+                color: getColor(red);
+            }
+        }
+    }
+
+    .emails{
+        margin-right: $em-right-marg;
+        font-family: Arial, Helvetica, sans-serif;
+        .email{
+            position: relative;
+            display: flex;
+            align-items: center;
+            background-color: getColor(em_bg);
+            padding: 15px;
+            border-bottom: 1px solid getColor(outline-em);
+            
+            .email-sender {
+                position: absolute;
+                margin-left: 8%;
+                font-weight: bold;
+            }
+            .email-title {
+                position: absolute;
+                margin-left: 28%;
+                font-weight: bold;
+            }
+            
+            
+            .email-time {
+                font-weight: bold;
+                font-size: 80%;
+                margin-left: auto;
+            }
+
+            .email-actions {
+                position: absolute;
+                display: flex;
+                justify-content: space-between;
+                color: getColor(filter);
+                font-size: 120%;
+                width: 10%;
+                right: 20px;
+            }
+        }
+
+
+    }
 }
