Updated scroll bars, compose button

--- a/src/pug/components/email-main.pug
+++ b/src/pug/components/email-main.pug
@@ -1,63 +1,298 @@
 .email-main
     .actions
         .left-actions
-            input(type="checkbox", name="")
+            input(type="checkbox" name="")
             i.fas.fa-redo-alt
             i.fas.fa-ellipsis-v
         .right-actions
             span.count 1-50 of 250
             i.fas.fa-chevron-left
             i.fas.fa-chevron-right
-    
-    .filters
-        .filter
-            i.fas.fa-inbox
-            span.filter-title Primary
-            .underline#pri-under
-        .filter
-            i.fas.fa-user-friends
-            span.filter-title Social
-            //- .underline
-        .filter
-            i.fas.fa-tag
-            span.filter-title Promotions
-            //- .underline
-        .filter
-            i.fas.fa-info-circle
-            span.filter-title Updates
-            //- .underline
 
-    .emails
-        .email
-            input(type="checkbox", name="")
-            i.far.fa-star
-            .email-sender Mom
-            .email-title Title of Email
-            .email-time 9:42 AM
-            .email-actions
-                i.fas.fa-archive
-                i.fas.fa-trash
-                i.fas.fa-envelope-open
-                i.fas.fa-clock
-        .email
-            input(type="checkbox", name="")
-            i.far.fa-star
-            .email-sender Mom
-            .email-title Title of Email
-            .email-time 9:42 AM
-            .email-actions
-                i.fas.fa-archive
-                i.fas.fa-trash
-                i.fas.fa-envelope-open
-                i.fas.fa-clock
-        .email
-            input(type="checkbox", name="")
-            i.far.fa-star
-            .email-sender Mom
-            .email-title Title of Email
-            .email-time 9:42 AM
-            .email-actions
-                i.fas.fa-archive
-                i.fas.fa-trash
-                i.fas.fa-envelope-open
-                i.fas.fa-clock
+    .scroll
+        .filters
+            .filter
+                i.fas.fa-inbox
+                span.filter-title Primary
+                .underline#pri-under
+            .filter
+                i.fas.fa-user-friends
+                span.filter-title Social
+                //- .underline
+            .filter
+                i.fas.fa-tag
+                span.filter-title Promotions
+                //- .underline
+            .filter
+                i.fas.fa-info-circle
+                span.filter-title Updates
+                //- .underline
+
+        .emails
+            .email
+                input(type="checkbox" name="")
+                i.far.fa-star
+                .email-sender Sally Fields
+                .email-title Title of Email
+                .email-time 9:42 AM
+                .email-actions
+                    i.fas.fa-archive
+                    i.fas.fa-trash
+                    i.fas.fa-envelope-open
+                    i.fas.fa-clock
+            .email
+                input(type="checkbox" name="")
+                i.far.fa-star
+                .email-sender YouTube
+                .email-title You didn't sign up for these emails
+                .email-time 8:30 AM
+                .email-actions
+                    i.fas.fa-archive
+                    i.fas.fa-trash
+                    i.fas.fa-envelope-open
+                    i.fas.fa-clock
+            .email
+                input(type="checkbox" name="")
+                i.far.fa-star
+                .email-sender Andrew Beenstead
+                .email-title This is an ordinary email
+                .email-time Oct 12
+                .email-actions
+                    i.fas.fa-archive
+                    i.fas.fa-trash
+                    i.fas.fa-envelope-open
+                    i.fas.fa-clock
+            .email
+                input(type="checkbox" name="")
+                i.far.fa-star
+                .email-sender Bladder Stone Mark
+                .email-title Title of Email
+                .email-time Oct 5
+                .email-actions
+                    i.fas.fa-archive
+                    i.fas.fa-trash
+                    i.fas.fa-envelope-open
+                    i.fas.fa-clock
+            .email
+                input(type="checkbox" name="")
+                i.far.fa-star
+                .email-sender Demo Campaign
+                .email-title Title of Email
+                .email-time Oct 2
+                .email-actions
+                    i.fas.fa-archive
+                    i.fas.fa-trash
+                    i.fas.fa-envelope-open
+                    i.fas.fa-clock
+            .email
+                input(type="checkbox" name="")
+                i.far.fa-star
+                .email-sender Mail Service
+                .email-title Title of Email
+                .email-time Oct 1
+                .email-actions
+                    i.fas.fa-archive
+                    i.fas.fa-trash
+                    i.fas.fa-envelope-open
+                    i.fas.fa-clock
+        .emails
+            .email
+                input(type="checkbox" name="")
+                i.far.fa-star
+                .email-sender Carlton Arms
+                .email-title Title of Email
+                .email-time Oct 1
+                .email-actions
+                    i.fas.fa-archive
+                    i.fas.fa-trash
+                    i.fas.fa-envelope-open
+                    i.fas.fa-clock
+            .email
+                input(type="checkbox" name="")
+                i.far.fa-star
+                .email-sender Momosisas
+                .email-title Title of Email
+                .email-time Sept 28
+                .email-actions
+                    i.fas.fa-archive
+                    i.fas.fa-trash
+                    i.fas.fa-envelope-open
+                    i.fas.fa-clock
+            .email
+                input(type="checkbox" name="")
+                i.far.fa-star
+                .email-sender Shoulder Singer
+                .email-title Title of Email
+                .email-time Sept 15
+                .email-actions
+                    i.fas.fa-archive
+                    i.fas.fa-trash
+                    i.fas.fa-envelope-open
+                    i.fas.fa-clock
+            .email
+                input(type="checkbox" name="")
+                i.far.fa-star
+                .email-sender English Master
+                .email-title Title of Email
+                .email-time Sept 14
+                .email-actions
+                    i.fas.fa-archive
+                    i.fas.fa-trash
+                    i.fas.fa-envelope-open
+                    i.fas.fa-clock
+            .email
+                input(type="checkbox" name="")
+                i.far.fa-star
+                .email-sender Mom
+                .email-title Title of Email
+                .email-time Sept 13
+                .email-actions
+                    i.fas.fa-archive
+                    i.fas.fa-trash
+                    i.fas.fa-envelope-open
+                    i.fas.fa-clock
+            .email
+                input(type="checkbox" name="")
+                i.far.fa-star
+                .email-sender Nester Blackreach
+                .email-title Title of Email
+                .email-time Sept 13
+                .email-actions
+                    i.fas.fa-archive
+                    i.fas.fa-trash
+                    i.fas.fa-envelope-open
+                    i.fas.fa-clock
+        .emails
+            .email
+                input(type="checkbox" name="")
+                i.far.fa-star
+                .email-sender Mister Klein
+                .email-title Title of Email
+                .email-time Sept 12
+                .email-actions
+                    i.fas.fa-archive
+                    i.fas.fa-trash
+                    i.fas.fa-envelope-open
+                    i.fas.fa-clock
+            .email
+                input(type="checkbox" name="")
+                i.far.fa-star
+                .email-sender Dad
+                .email-title Title of Email
+                .email-time Sept 11
+                .email-actions
+                    i.fas.fa-archive
+                    i.fas.fa-trash
+                    i.fas.fa-envelope-open
+                    i.fas.fa-clock
+            .email
+                input(type="checkbox" name="")
+                i.far.fa-star
+                .email-sender Klestin Creature
+                .email-title Title of Email
+                .email-time Sept 11
+                .email-actions
+                    i.fas.fa-archive
+                    i.fas.fa-trash
+                    i.fas.fa-envelope-open
+                    i.fas.fa-clock
+            .email
+                input(type="checkbox" name="")
+                i.far.fa-star
+                .email-sender The Manumission Society
+                .email-title Title of Email
+                .email-time Sept 7
+                .email-actions
+                    i.fas.fa-archive
+                    i.fas.fa-trash
+                    i.fas.fa-envelope-open
+                    i.fas.fa-clock
+            .email
+                input(type="checkbox" name="")
+                i.far.fa-star
+                .email-sender Christopher Hitchens
+                .email-title Title of Email
+                .email-time Sept 3
+                .email-actions
+                    i.fas.fa-archive
+                    i.fas.fa-trash
+                    i.fas.fa-envelope-open
+                    i.fas.fa-clock
+            .email
+                input(type="checkbox" name="")
+                i.far.fa-star
+                .email-sender E. M. Forster
+                .email-title Title of Email
+                .email-time August 15
+                .email-actions
+                    i.fas.fa-archive
+                    i.fas.fa-trash
+                    i.fas.fa-envelope-open
+                    i.fas.fa-clock
+        .emails
+            .email
+                input(type="checkbox" name="")
+                i.far.fa-star
+                .email-sender George Orwell
+                .email-title Title of Email
+                .email-time August 14
+                .email-actions
+                    i.fas.fa-archive
+                    i.fas.fa-trash
+                    i.fas.fa-envelope-open
+                    i.fas.fa-clock
+            .email
+                input(type="checkbox" name="")
+                i.far.fa-star
+                .email-sender Mark Twain
+                .email-title Title of Email
+                .email-time August 13
+                .email-actions
+                    i.fas.fa-archive
+                    i.fas.fa-trash
+                    i.fas.fa-envelope-open
+                    i.fas.fa-clock
+            .email
+                input(type="checkbox" name="")
+                i.far.fa-star
+                .email-sender Margaret Singer
+                .email-title Title of Email
+                .email-time August 10
+                .email-actions
+                    i.fas.fa-archive
+                    i.fas.fa-trash
+                    i.fas.fa-envelope-open
+                    i.fas.fa-clock
+            .email
+                input(type="checkbox" name="")
+                i.far.fa-star
+                .email-sender Pumpkin Head
+                .email-title Title of Email
+                .email-time August 7
+                .email-actions
+                    i.fas.fa-archive
+                    i.fas.fa-trash
+                    i.fas.fa-envelope-open
+                    i.fas.fa-clock
+            .email
+                input(type="checkbox" name="")
+                i.far.fa-star
+                .email-sender Sister Frieda
+                .email-title Title of Email
+                .email-time August 5
+                .email-actions
+                    i.fas.fa-archive
+                    i.fas.fa-trash
+                    i.fas.fa-envelope-open
+                    i.fas.fa-clock
+            .email
+                input(type="checkbox" name="")
+                i.far.fa-star
+                .email-sender Dindra Maxime
+                .email-title Title of Email
+                .email-time May 23
+                .email-actions
+                    i.fas.fa-archive
+                    i.fas.fa-trash
+                    i.fas.fa-envelope-open
+                    i.fas.fa-clock
