--- a/src/styles/components/_email-main.scss
+++ b/src/styles/components/_email-main.scss
@@ -3,7 +3,14 @@
 .email-main {
     grid-column: 2;
 
+    .scroll{
+        overflow: scroll;
+        height: 86vh;
+    }
+
     .actions {
+        // float: top;
+        // position: absolute;
         @include flex-center;
         color: getColor(side-icon);
         padding: 15px 20px;
@@ -30,25 +37,29 @@
         height: 60px;
         align-items: center;
         margin-right: $em-right-marg;
+        // margin-top: 35px;
         border-bottom: 1px solid getColor(outline-em);
 
         .filter {
             position: relative;
             color: getColor(filter);
             width: 24%;
-            // padding: 20px;
-            // padding-right: 60px;
+            height: 100%;
+
             i {
+                margin: 22px 0;
                 margin-left: 15%;
             }
 
             span {
+                position: relative;
                 margin-left: 20px;
             }
 
             .underline {
                 position: absolute;
-                bottom: -21px;
+                bottom: 0px;
+                // bottom: -21px;
                 height: 5px;
                 width: 90%;
                 margin-left: 5%;
@@ -68,20 +79,25 @@
             &:first-of-type {
                 color: getColor(red);
             }
+
+            &:hover {
+                // background-color: green;
+                background-color: getColor(filter-hover-bg);
+            }
         }
     }
 
-    .emails{
+    .emails {
         margin-right: $em-right-marg;
         font-family: Arial, Helvetica, sans-serif;
-        .email{
+        .email {
             position: relative;
             display: flex;
             align-items: center;
             background-color: getColor(em_bg);
             padding: 15px;
             border-bottom: 1px solid getColor(outline-em);
-            
+
             .email-sender {
                 position: absolute;
                 margin-left: 8%;
@@ -92,8 +108,7 @@
                 margin-left: 28%;
                 font-weight: bold;
             }
-            
-            
+
             .email-time {
                 font-weight: bold;
                 font-size: 80%;
@@ -108,9 +123,22 @@
                 font-size: 120%;
                 width: 10%;
                 right: 20px;
+                opacity: 0;
+            }
+
+            transition: all 0.2s;
+            &:hover {
+                box-shadow: 0 2px 2px rgba(0, 0, 0, 0.13),
+                    0 -2px 2px rgba(0, 0, 0, 0.13);
+                z-index: 10;
+
+                & > .email-actions {
+                    opacity: 1;
+                }
+                & > .email-time {
+                    opacity: 0;
+                }
             }
         }
-
-
     }
 }
