--- a/src/styles/libs/_mixins.scss
+++ b/src/styles/libs/_mixins.scss
@@ -1,4 +1,5 @@
 @use 'functions' as *;
+@use 'variables' as *;
 
 @mixin flex-center {
     display: flex;
@@ -9,4 +10,42 @@
 @mixin user-pic {
     height: 35px;
     border-radius: 50%;
+}
+
+@mixin side-folder {
+    position: relative;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    padding: 10px 10px;
+    // padding-left: $side-left-pad;
+    margin-right: $side-right-marg;
+    border-bottom-right-radius: 30px;
+    border-top-right-radius: 30px;
+    color: getColor(fg);
+
+    &:first-of-type {
+        background-color: getColor(search);
+    }
+
+    &:hover {
+        background-color: getColor(folder-hover);
+    }
+
+    i {
+        margin-left: $side-left-pad;
+        position: absolute;
+        color: getColor(side-icon);
+    }
+    .folder-name {
+        position: absolute;
+        margin-left: $side-left-pad*3 - 20px;
+    }
+}
+
+@mixin side-folder-head {
+    .head{
+        color: getColor(fg);
+        padding: 15px 25px ;
+    }
 }
