added new tage on filter buttons

--- a/src/pug/components/email-main.pug
+++ b/src/pug/components/email-main.pug
@@ -18,14 +18,17 @@
             .filter
                 i.fas.fa-user-friends
                 span.filter-title Social
+                span.new#social-new 2 new
                 //- .underline
             .filter
                 i.fas.fa-tag
                 span.filter-title Promotions
+                span.new#promo-new 8 new
                 //- .underline
             .filter
                 i.fas.fa-info-circle
                 span.filter-title Updates
+                span.new#update-new 1 new
                 //- .underline
 
         .emails
@@ -95,7 +98,6 @@
                     i.fas.fa-trash
                     i.fas.fa-envelope-open
                     i.fas.fa-clock
-        .emails
             .email
                 input(type="checkbox" name="")
                 i.far.fa-star
@@ -162,7 +164,6 @@
                     i.fas.fa-trash
                     i.fas.fa-envelope-open
                     i.fas.fa-clock
-        .emails
             .email
                 input(type="checkbox" name="")
                 i.far.fa-star
@@ -229,7 +230,6 @@
                     i.fas.fa-trash
                     i.fas.fa-envelope-open
                     i.fas.fa-clock
-        .emails
             .email
                 input(type="checkbox" name="")
                 i.far.fa-star
